# securetar

./: MANIFEST.in  README.md  pyproject.toml  requirements-test.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: pythonpublish.yml  test.yml
securetar/: __init__.py
tests/: __init__.py  test_tar.py
tests/fixtures/: backup_encrypted_gzipped_legacy_format.tar
